removed z-index from itemcontainer since its useless and causes a bug....

--- a/components/SideBar/SideBar.css
+++ b/components/SideBar/SideBar.css
@@ -31,7 +31,6 @@
 }
 
 .itemContainer{
-    z-index: 5;
     padding-top: 25px; 
     user-select: none;
 }
